Changes for 3.0.6rc1

New features:
........S. [ZBX-10694] added rollup health sensor item to vmware hypervisor template (wiper)
........S. [ZBXNEXT-2969] added support for suffixed and negative trigger function parameters (gleb)

Bug fixes:
..F....PS. [ZBX-11221] fixed MySQL connection issue by overriding user defined auto commit setting (Oleg, vso)
A......... [ZBX-11291] fixed LLD rule not validating "lifetime" field (Ivo)
..F....... [ZBX-11209] fixed visual bugs in various browsers (Pavel, Sasha)
..F....... [ZBX-10958] fixed displaying of user name for inaccessible users; fixed warnings in PHPUnit test; fixed undefined offsets in screen "Action logs" (Gunars)
A......... [ZBX-11091] fixed parsing of XML file which contains tag with attributes but without child tags; it could cause significant memeory leak (Sasha)
........S. [ZBX-10694] reverted hypervisor health status to HostSystem.overallStatus property (wiper)
..F....... [ZBX-11276] removed extra double quotes in host interface form (Gunars)
........S. [ZBX-11300] fixed variable used in forecast function (gleb)
A..G...... [ZBX-11146] fixed validation of item update interval 0 (Gunars, vso)
.......PS. [ZBX-11021] fixed discoverer to log that it has started before SNMP library initialization (vso)
.......PS. [ZBX-11213] fixed database monitoring keys (wiper)

--------------------------------------------------------------------------------
Changes for 3.0.5

3.0.5rc2 was released as 3.0.5 without any changes

--------------------------------------------------------------------------------
Changes for 3.0.5rc2

Bug fixes:
..F....... [ZBX-11220] fixed visibility of latest event in Monitoring->Events page (Sasha)

--------------------------------------------------------------------------------
Changes for 3.0.5rc1

New features:
.......PS. [ZBXNEXT-3106] improved concurrent VMware item polling speed, reduced size of cached VMware data (wiper)
..F....... [ZBX-11136] increased width of input fields (Sasha)